number of question value to -1 if it is a question node

--- a/network_primary.ipynb
+++ b/network_primary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "19  Stagflation, know the stages of economy and mo...                 1  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
     "    elif G.nodes[node]['type'] == 'Subtopic':\n",
     "        G.nodes[node]['number_of_questions'] = len(nx.descendants_at_distance(G, node, 1))\n",
     "    elif G.nodes[node]['type'] == 'Question': \n",
-    "        G.nodes[node]['number_of_questions'] = 'this is a question'"
+    "        G.nodes[node]['number_of_questions'] = -1"
    ]
   },
   {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,17 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in net.nodes: \n",
-    "    node['title'] = \"Number of questions: \" + str(node['number_of_questions'])"
+    "    if node['number_of_questions'] == -1: \n",
+    "        node['title'] = 'This is a question'\n",
+    "    else: node['title'] = \"Number of questions: \" + str(node['number_of_questions'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -687,183 +689,183 @@
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Taxes 1',\n",
        "  'label': 'Taxes 1',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Price Elasticity of Demand 1',\n",
        "  'label': 'Price Elasticity of Demand 1',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Price Elasticity of Demand 2',\n",
        "  'label': 'Price Elasticity of Demand 2',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Consumer Behavior',\n",
        "  'label': 'Consumer Behavior',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Opportunity Cost',\n",
        "  'label': 'Opportunity Cost',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Price Discrimination',\n",
        "  'label': 'Price Discrimination',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Monopoly Pricing',\n",
        "  'label': 'Monopoly Pricing',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Taxes 2',\n",
        "  'label': 'Taxes 2',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Taxes 3',\n",
        "  'label': 'Taxes 3',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 0,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Externalities',\n",
        "  'label': 'Externalities',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Transaction Costs',\n",
        "  'label': 'Transaction Costs',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Entry Game',\n",
        "  'label': 'Entry Game',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Free-rider problem',\n",
        "  'label': 'Free-rider problem',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Output Gap',\n",
        "  'label': 'Output Gap',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Unemployment',\n",
        "  'label': 'Unemployment',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Monetary Policy',\n",
        "  'label': 'Monetary Policy',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Fiscal Policy',\n",
        "  'label': 'Fiscal Policy',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Stagation',\n",
        "  'label': 'Stagation',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Inequality',\n",
        "  'label': 'Inequality',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 0,\n",
        "  'type': 'Question',\n",
-       "  'number_of_questions': 'this is a question',\n",
+       "  'number_of_questions': -1,\n",
        "  'size': 10,\n",
        "  'id': 'Nobel Prize',\n",
        "  'label': 'Nobel Prize',\n",
        "  'shape': 'dot',\n",
-       "  'title': 'Number of questions: this is a question'},\n",
+       "  'title': 'This is a question'},\n",
        " {'color': '#97c2fc',\n",
        "  'type': 'Topic',\n",
        "  'number_of_questions': 0,\n",
@@ -946,7 +948,7 @@
        "  'title': 'Number of questions: 0'}]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -982,10 +984,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13397c5c0>"
+       "<IPython.lib.display.IFrame at 0x1355f6930>"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
