parent scores based on children scores

--- a/network_primary.ipynb
+++ b/network_primary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "19  Stagflation, know the stages of economy and mo...                 1  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,12 +419,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now the score for subtopics and topics based on descendants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_score(network, parent, distance): \n",
+    "    # this function takes in a network and a parent node and calculates the average score of its children nodes\n",
+    "    children = nx.descendants_at_distance(network, parent, distance) \n",
+    "    scores = [network.nodes[child]['score'] for child in children if 'score' in network.nodes[child]]\n",
+    "    if scores:\n",
+    "        return sum(scores) / len(scores)\n",
+    "    else:\n",
+    "        return ValueError "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in G.nodes(): \n",
+    "    if G.nodes[node]['type'] == 'Subtopic': \n",
+    "        if G.nodes[node]['number_of_questions'] >= 1: \n",
+    "            G.nodes[node]['score'] = average_score(G, node, 1) \n",
+    "    elif G.nodes[node]['type'] == 'Topic': \n",
+    "        if G.nodes[node]['number_of_questions'] >= 1: \n",
+    "            G.nodes[node]['score'] = average_score(G, node, 2)\n",
+    "    elif G.nodes[node]['type'] == 'Main': #only for economics\n",
+    "        if G.nodes[node]['number_of_questions'] >= 1: \n",
+    "            G.nodes[node]['score'] = average_score(G, node, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h4>Pyvis conversion</h4>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -473,6 +514,7 @@
        "[{'color': '#97c2fc',\n",
        "  'type': 'Main',\n",
        "  'number_of_questions': 20,\n",
+       "  'score': 0.9,\n",
        "  'size': 10,\n",
        "  'id': 'Economics',\n",
        "  'label': 'Economics',\n",
@@ -481,6 +523,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Topic',\n",
        "  'number_of_questions': 13,\n",
+       "  'score': 0.9230769230769231,\n",
        "  'size': 10,\n",
        "  'id': 'Microeconomics',\n",
        "  'label': 'Microeconomics',\n",
@@ -489,6 +532,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Topic',\n",
        "  'number_of_questions': 6,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Macroeconomics',\n",
        "  'label': 'Macroeconomics',\n",
@@ -505,6 +549,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Topic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 0.0,\n",
        "  'size': 10,\n",
        "  'id': 'Research',\n",
        "  'label': 'Research',\n",
@@ -513,6 +558,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 3,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Competitive markets',\n",
        "  'label': 'Competitive markets',\n",
@@ -521,6 +567,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': \"Consumer's choice\",\n",
        "  'label': \"Consumer's choice\",\n",
@@ -529,6 +576,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': \"Firm's behavior\",\n",
        "  'label': \"Firm's behavior\",\n",
@@ -537,6 +585,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 2,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Non-competitive markets',\n",
        "  'label': 'Non-competitive markets',\n",
@@ -545,6 +594,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 2,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Government interventions',\n",
        "  'label': 'Government interventions',\n",
@@ -553,6 +603,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 2,\n",
+       "  'score': 0.5,\n",
        "  'size': 10,\n",
        "  'id': 'Market failures',\n",
        "  'label': 'Market failures',\n",
@@ -569,6 +620,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 2,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Game theory',\n",
        "  'label': 'Game theory',\n",
@@ -585,6 +637,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Macroeconomic data',\n",
        "  'label': 'Macroeconomic data',\n",
@@ -617,6 +670,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 4,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Monetary and fiscal policy',\n",
        "  'label': 'Monetary and fiscal policy',\n",
@@ -633,6 +687,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 1.0,\n",
        "  'size': 10,\n",
        "  'id': 'Institutions and Inequality',\n",
        "  'label': 'Institutions and Inequality',\n",
@@ -681,6 +736,7 @@
        " {'color': '#97c2fc',\n",
        "  'type': 'Subtopic',\n",
        "  'number_of_questions': 1,\n",
+       "  'score': 0.0,\n",
        "  'size': 10,\n",
        "  'id': 'Nobel research (connectivity)',\n",
        "  'label': 'Nobel research (connectivity)',\n",
@@ -948,7 +1004,7 @@
        "  'title': 'Number of questions: 0'}]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +1015,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'Subtopic', 'number_of_questions': 2, 'score': 0.5, 'size': 10}"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes['Market failures']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -984,10 +1060,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1355f6930>"
+       "<IPython.lib.display.IFrame at 0x135604a70>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
